--- a/alanthilak/src/components/Leadership/Leadership.css
+++ b/alanthilak/src/components/Leadership/Leadership.css
@@ -33,7 +33,9 @@
 }
 
 .leadership-grid {
-    display: grid;
+    display: flex;
+    width: 90vw;
+    height: 100%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 40px;
 }
