Header updated. New images added

--- a/alanthilak/src/components/Hero/Hero.css
+++ b/alanthilak/src/components/Hero/Hero.css
@@ -39,6 +39,8 @@
     max-width: 800px;
     color: #fff;
     padding-top: 45vh;
+    align-items: center;
+    justify-content: center;
 }
 
 .hero-text h1 {
