--- a/alanthilak/src/components/Socials/Socials.css
+++ b/alanthilak/src/components/Socials/Socials.css
@@ -23,6 +23,7 @@
     color: #666;
     font-size: 1.1rem;
     margin-bottom: 40px;
+    /* margin-top: 30px; */
 }
 
 .social-icons {
@@ -30,6 +31,7 @@
     justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
+    margin-bottom: 40px;
 }
 
 .social-link {
