--- a/alanthilak/src/index.css
+++ b/alanthilak/src/index.css
@@ -6,7 +6,6 @@
     box-sizing: border-box;
     font-family: "Ubuntu", serif;
     font-style: normal;
-
 }
 
 body {
@@ -25,11 +24,13 @@ li {
     cursor: pointer;
 }
 
+/* Global Container */
 .container {
     padding-left: 6%;
     padding-right: 6%;
 }
 
+/* Global Button */
 .btn {
     display: inline-flex;
     background: #fff;
@@ -45,13 +46,14 @@ li {
     justify-content: center;
 }
 
+/* Global Header */
 .header {
     text-align: center;
     margin-bottom: 60px;
 }
 
 .header h1 {
-    font-size: 2.8rem;
+    font-size: clamp(2rem, 4vw, 2.5rem);
     color: #2a2a2a;
     margin-bottom: 2rem;
     position: relative;
@@ -77,6 +79,7 @@ li {
     width: 120px;
 }
 
+/* Global Section Underline */
 .section-underline {
     width: 80%;
     height: 2px;
