--- a/alanthilak/src/index.css
+++ b/alanthilak/src/index.css
@@ -86,3 +86,12 @@ li {
     background: #eee;
     margin: 40px auto 0;
 }
+.section-subtitle {
+    color: #666;
+    font-size: 1rem;
+    margin-bottom: 3rem;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.6;
+}
