Music Section Added. UI Updated, Branches &  Locations Added

--- a/alanthilak/src/components/Leadership/Leadership.css
+++ b/alanthilak/src/components/Leadership/Leadership.css
@@ -44,6 +44,7 @@
 .leader-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+    background-color: rgb(203, 203, 22);
 }
 
 /* Leader Image */
